feature: enable multiple functions and add unit testing to pipelne

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          # trigger the tests here!
+          make test.all
 
   delete-feature:
     if: startsWith(github.event.ref, 'feature') && github.event_name == 'delete'
