--- a/template.yaml
+++ b/template.yaml
@@ -26,7 +26,7 @@ Resources:
   MyFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: hello-world/
+      CodeUri: functions/hello-world/
       Handler: app.lambdaHandler
       Runtime: nodejs16.x
       Architectures:
